2004-05-12  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/lang/Integer/getInteger.java : fixed the
	security test to work on JDK 1.4, and to always remove the test
	security manager.
	* gnu/testlet/java/io/FilePermission/simple.java : fixed existing
	test to work on JDK 1.4.  Added new tests for constructor arg
	checking (as per the JDK 1.4 javadoc).

2004-05-11  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/io/FilterWriter/MyFilterWriter.java : new file
	* gnu/testlet/java/io/FilterWriter/write.java : fixed structure,
	and added test for documented behaviour of new FilterWriter(null).

2004-05-11  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/util/logging/Logger/TestSecurityManager.java 
	(checkPermission): include the permission in the message when
	throwing AccessControlException
	* gnu/testlet/java/util/logging/Logger/getAnonymousLogger.java (test):
	disable the test's security manager.  The JDK 1.4.2 implementation
	of logging requires 'LoggingPermission("control")' during static
	initialization of the Logger class.

2004-05-09  Jerry Quinn  <jlquinn@optonline.net>

	* gnu/testlet/java/util/SimpleTimeZone/check12.java (test): Fix
	silly errors in test parameters.

2004-05-07  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/NetworkInterface/getByName.java:
	New file.

2004-05-07  Jerry Quinn  <jlquinn@optonline.net>

	* gnu/testlet/java/util/Calendar/minmax.java: New test.

2004-05-02  C. Brian Jones  <cbj@gnu.org>
	
	* gnu/testlet/java/io/File/jdk11.java 
	(test): access static field in config in a static way
	* gnu/testlet/java/text/CollationElementIterator/jdk11.java 
	(test): access static field harness in a static way
	* gnu/testlet/java/net/Socket/SocketTest.java 
	(test_BasicBServer): access static field harness in a static way
	* gnu/testlet/java/net/URLConnection/URLConnectionTest.java 
	(test_URLConnection): access static method in URLConnection in a 
	static way
	* gnu/testlet/java/net/SocketTest.java 