@@ -1,3 +1,9 @@
+2004-05-13  Guilhem Lavaux <guilhem@kaffe.org>
+
+	* gnu/testlet/java/text/RuleBasedCollator/jdk11.java: Fixed
+	the test according to the following bug in the JDK
+	http://developer.java.sun.com/developer/bugParade/bugs/4406815.html
+
 2004-05-12  Stephen Crawley <crawley@dstc.edu.au>
 
 	* gnu/testlet/java/lang/Integer/getInteger.java : fixed the
